[package]
name = "oxiderr-derive"
version = "0.1.0"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "Streamlining Error Handling in Rust"
documentation = "https://docs.rs/oxiderr-derive"
edition = "2021"
homepage = "https://github.com/cdumay/oxiderr-derive"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/oxiderr-derive"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "2.0.96"
quote = "1.0.38"
